# PolyCouncil

./: .gitattributes  .gitignore  LICENSE  PolyCouncil.rc  PolyCouncil.spec  PolyCouncilTest.spec  README.md  README_BUILD.md  README_ICON_FIX.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  build.bat  build_exe.spec  build_with_icon.bat  check_exe_icon.py  clear_icon_cache.bat  constants.py  council.py  council_settings.json  council_stats.db  embed_icon_post_build.py  fix_icon_embedding.py  generate_icon.py  generate_icon_simple.py  main.py  pyproject.toml  qml_bridge.py  refresh_exe_icon.bat  requirements.txt  test_icon.py
.github/: FUNDING.yml
.github/workflows/: build-cross-platform.yml
config/: default_personas.json
core/: __init__.py  api_client.py  app_state.py  discussion_manager.py  leaderboard.py  personas.py  provider_config.py  rendering.py  result_presenter.py  secure_store.py  session_history.py  settings_store.py  tool_manager.py
docs/releases/: README.md  RELEASE_NOTES_v1.0.0.md
gui/: __init__.py  debug_timeline.py  main.qml  model_list.py  persona_panel.py  provider_profiles.py  workspace_panel.py
gui/components/: AppButton.qml  Eyebrow.qml  GlassPanel.qml  SoftBadge.qml  (+4 more)
tests/: test_api_client.py  test_discussion_consensus.py  test_discussion_manager.py  test_mixed_provider_routing.py  test_model_capabilities.py  test_model_list.py  test_personas.py  test_provider_config.py  test_rendering_safety.py  test_secure_settings.py  test_voting.py
ui/: __init__.py  animations.py  components.py  factories.py  theme.py
