[project]
name = "polycouncil"
version = "0.1.0"
description = "Desktop multi-model deliberation and discussion workflow for local and hosted LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.5.0",
  "aiohttp>=3.8.0",
  "qasync>=0.27.1",
  "pypdf>=4.0.0",
  "python-docx>=1.0.0",
  "markdown>=3.4.0",
  "bleach>=6.1.0",
  "keyring>=25.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
